[package]
name = "waifu2x"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
image = "0.24.5"
tch = "0.10.3"
safetensors = "0.2.8"

[dev-dependencies]


[features]
default = []
