[package]
name = "waifu2x"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Waifu2X super resolution in rust"
repository = "https://github.com/libwaifu/waifu-2x"
documentation = "https://docs.rs/waifu2x"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
log = "0.4.17"
ndarray = "0.15.6"
itertools = "0.10.5"

[dependencies.image]
version = "0.24.5"
features = ["png", "jpeg", "jpeg_rayon"]
default-features = false

[dependencies.ort]
version = "1.14.1"
#features = []
default-features = false

[dev-dependencies]


[features]
default = []
